--- a/templates/tambah-produk.html
+++ b/templates/tambah-produk.html
@@ -97,7 +97,7 @@
 
     <div class="container">
         <div class="mb-4">
-            <a href="index.html" class="text-secondary text-decoration-none">
+            <a href="/" class="text-secondary text-decoration-none">
                 <i class="fas fa-arrow-left"></i> Kembali ke Daftar Produk
             </a>
         </div>
