--- a/templates/index.html
+++ b/templates/index.html
@@ -141,7 +141,7 @@
     <div class="sidebar">
         <h4 class="text-center">HerbaLife</h4>
         <hr>
-        <a href="index.html" class="active">
+        <a href="/" class="active">
             <i class="fas fa-home"></i> Dashboard
         </a>
         <a href="/add_product">
