--- a/templates/produk_keluar.html
+++ b/templates/produk_keluar.html
@@ -43,13 +43,20 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light mb-4">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/">
                 <i class="fas fa-boxes me-2"></i> Dashboard Produk Keluar
             </a>
         </div>
     </nav>
 
     <div class="container">
+        
+        <div class="mb-4">
+            <a href="/" class="text-secondary text-decoration-none">
+                <i class="fas fa-arrow-left"></i> Kembali ke Daftar Produk
+            </a>
+        </div>
+
         <div class="card">
             <div class="card-body">
                 <h1 class="mb-4">Form Produk Keluar</h1>
